<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/home_menu"
    android:icon="@drawable/ic_home_selected"
    android:title="@string/home"
    app:showAsAction="always"
    android:titleCondensed="@string/home"
    />
    <item
        android:id="@+id/photo_menu"
        android:icon="@drawable/ic_add_photos_unselected"
        android:title="@string/photo"
        app:showAsAction="always"
        android:titleCondensed="@string/photo"
        />

    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_profile_unselected"
        android:title="@string/profile"
        app:showAsAction="always"
        android:titleCondensed="@string/profile"

        />

</menu>